guide swagger
